# litellm-agent-control-plane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  FORK.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  agent_templates.json  components.json  compose.yaml  config.yaml.example  deployment.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  readme.md  render.yaml  server-proxy.mjs  start.sh  test_utils.py  tsconfig.json  tsconfig.worker.json  verify.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
cli/: package.json
deploy/: README.md  render.config.yaml
docs/: automations.md  codex-quickstart.mdx  docs.json  hermes-quickstart.mdx  introduction.mdx  k8s-backend.md  lap-cli.md  openapi.json  quickstart.mdx  rbac.md  session-event-flow.md
e2b/: README.md  cloud-vault-ca.crt  dev-up.sh  e2b.Dockerfile  e2b.toml  litellm-shot.py  litellm-up.sh  start-db.sh
k8s/: opencode-sandbox.yaml  priority-classes.yaml  rbac-platform.yaml  sandbox-template-claude-agent-sdk.yaml  sandbox-warm-pool-example.yaml  test-sandbox-claim.yaml  web.yaml  worker.yaml
managed-tools/: package.json
prisma/: schema.prisma
scripts/: cron-parse.test.mjs  demo-playwright.mts  mini-load-test.sh  qa_elastic.sh  stub-harness.mts  verify-runtimes.sh
skills/: create-harness.md
src/: README.md  instrumentation.ts  lib.rs  main.rs
templates/: AGENTS.md  README.md  WORKSPACE_CONTRACT.md  manifest.json
tests/: agent-issue-reporting.spec.ts  agent-task-checkpoint.spec.ts  messages.rs  (+11 more)
(+787 files in other folders)
